--- a/page.html
+++ b/page.html
@@ -3,10 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpage</title>
+    <link rel="stylesheet" href="page.css">
 </head>
 <body>
-    <h1>Hello Izzy</h1>
-    <p>Other content to come.</p>
-    <hr>
+    <nav>
+        <ul>
+            <li>Logo</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Values</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Clients</a></li>
+            <li><a href="#">Partners</a></li>
+        </ul>
+    </nav>
+    <div>
+        <ul>
+            <li>Menu</li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+        </ul>
+    </div>
+    <main>
+        <section>
+            <h1>Heading</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas repellendus similique, voluptas voluptate voluptates!
+            </p>
+        </section>
+        <section>
+            <h1>Heading</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas repellendus similique, voluptas voluptate voluptates!
+            </p>
+        </section>
+        <section>
+            <h1>Heading</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas repellendus similique, voluptas voluptate voluptates!
+            </p>
+        </section>
+    </main>
+
+    <div>
+        <!--ads-->
+    </div>
+    <footer>
+        <!--footer-->
+    </footer>
 </body>
 </html>
