--- a/page.html
+++ b/page.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="page.css">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>Logo</li>
+    <nav class="nav">
+        <ul class="nav-ul">
+            <li class="logo" href="logo">Logo</li>
             <li><a href="#">About</a></li>
             <li><a href="#">Values</a></li>
             <li><a href="#">News</a></li>
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <div>
-        <ul>
+        <ul class="link">
             <li>Menu</li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
@@ -27,31 +27,39 @@
         </ul>
     </div>
     <main>
-        <section>
+        <section class="body">
             <h1>Heading</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas repellendus similique, voluptas voluptate voluptates!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
+                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
+                repellendus similique, voluptas voluptate voluptates!
             </p>
         </section>
         <section>
             <h1>Heading</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas repellendus similique, voluptas voluptate voluptates!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
+                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
+                repellendus similique, voluptas voluptate voluptates!
             </p>
         </section>
         <section>
             <h1>Heading</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas repellendus similique, voluptas voluptate voluptates!
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
+                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
+                repellendus similique, voluptas voluptate voluptates!
             </p>
         </section>
     </main>
 
-    <div>
+    <div class="ad">
         <!--ads-->
+
     </div>
-    <footer>
+    <footer class="footer">
         <!--footer-->
+
     </footer>
 </body>
 </html>
