add extra row for page numbers

--- a/page.html
+++ b/page.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Webpage</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="css/page.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
 </head>
 <body>
     <nav class="nav">
         <ul class="nav-ul">
             <li class="logo" href="logo">Logo</li>
-            <li><a href="#">About</a></li>
+            <li><a class="link-padding" href="#">About</a></li>
             <li><a href="#">Values</a></li>
             <li><a href="#">News</a></li>
             <li><a href="#">Contacts</a></li>
@@ -54,11 +55,21 @@
     </main>
 
     <div class="ad">
-        <!--ads-->
+        <!--ads--> ads
 
     </div>
+    <div class="number">
+        <ul>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li><a href="#"><i class="fas fa-angle-double-right"></i></a></li>
+        </ul>
+    </div>
     <footer class="footer">
-        <!--footer-->
+        <!--footer--> footer
 
     </footer>
 </body>
