--- a/page.html
+++ b/page.html
@@ -18,45 +18,60 @@
             <li><a href="#">Partners</a></li>
         </ul>
     </nav>
-    <div>
+
         <ul class="link">
-            <li>Menu</li>
+            <li class="menu">Menu</li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
         </ul>
+
+
+        <section class="body1">
+            <h1>Heading</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
+                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
+                repellendus similique, voluptas voluptate voluptates! Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Amet aperiam aut blanditiis est expedita harum, illo in iste molestias necessitatibus nihil odit
+                praesentium quis quod quos rerum sed velit, veritatis?
+            </p>
+        </section>
+        <section class="body2" >
+            <h1>Heading</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
+                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
+                repellendus similique, voluptas voluptate voluptates! Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Accusantium animi asperiores assumenda deleniti deserunt dolore est illo ipsum minus molestias, mollitia
+                possimus quaerat quasi quod ratione, repellendus voluptatibus! Dicta, ducimus.
+            </p>
+        </section>
+        <section class="body3">
+            <h1>Heading</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
+                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
+                repellendus similique, voluptas voluptate voluptates! Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Eaque mollitia nostrum possimus repellendus soluta! Corporis eaque hic impedit labore odio, sequi
+                voluptates! Ad adipisci distinctio inventore, numquam optio qui reiciendis.
+            </p>
+        </section>
+
+
+    <div class="ad1" ID="vertical">
+        <!--ads-->
+        <span class="ADV">AD</span>
+        <span class="ADV2">AD</span>
     </div>
-    <main>
-        <section class="body">
-            <h1>Heading</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
-                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
-                repellendus similique, voluptas voluptate voluptates!
-            </p>
-        </section>
-        <section>
-            <h1>Heading</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
-                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
-                repellendus similique, voluptas voluptate voluptates!
-            </p>
-        </section>
-        <section>
-            <h1>Heading</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est laudantium quisquam reprehenderit saepe
-                temporibus. Blanditiis deleniti dolores fugit maiores, necessitatibus nemo officiis placeat quae, quas
-                repellendus similique, voluptas voluptate voluptates!
-            </p>
-        </section>
-    </main>
-
-    <div class="ad">
-        <!--ads--> ads
-
+    <div class="ad2">
+        <span class="ADV">AD</span>
+        <span class="ADV2">AD</span>
+    </div>
+    <div class="ad3">
+        <span class="ADV">AD</span>
+        <span class="ADV2">AD</span>
     </div>
     <div class="number">
         <ul>
