finish page.html (exercise)

--- a/page.html
+++ b/page.html
@@ -61,7 +61,7 @@
 
 
     <div class="ad1" ID="vertical">
-        <!--ads-->
+
         <span class="ADV">AD</span>
         <span class="ADV2">AD</span>
     </div>
@@ -80,12 +80,14 @@
             <li><a href="#">3</a></li>
             <li><a href="#">4</a></li>
             <li><a href="#">5</a></li>
-            <li><a href="#"><i class="fas fa-angle-double-right"></i></a></li>
+            <li><a href="#"><i class="fas fa-angle-double-right next-margin"></i></a></li>
         </ul>
     </div>
-    <footer class="footer">
-        <!--footer--> footer
-
+    <footer class="footer1">
+        Footer
+    </footer>
+    <footer class="footer2">
+        Powered by <a href="#">w3.css</a>
     </footer>
 </body>
 </html>
