--- a/page.html
+++ b/page.html
@@ -74,7 +74,7 @@
         <span class="ADV2">AD</span>
     </div>
     <div class="number">
-        <ul>
+        <ul class="span">
             <li><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
@@ -82,6 +82,7 @@
             <li><a href="#">5</a></li>
             <li><a href="#"><i class="fas fa-angle-double-right next-margin"></i></a></li>
         </ul>
+
     </div>
     <footer class="footer1">
         Footer
