--- a/page.html
+++ b/page.html
@@ -5,6 +5,7 @@
     <title>Webpage</title>
     <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <nav class="nav">
